2022-12-01T16:27:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3594522731 # 666
* notice: last 14d: unq all: 6 10
* notice: prev accum: outdated-unq outdated-all / unq all: 165 642 / 170 650
* notice: next accum: outdated-unq outdated-all / unq all: 165 642 / 171 652
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-12-01]

2022-12-01T01:51:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3588704797 # 664
* notice: last 14d: unq all: 5 8
* notice: prev accum: outdated-unq outdated-all / unq all: 163 633 / 168 642
* notice: next accum: outdated-unq outdated-all / unq all: 165 642 / 170 650
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-11-16] / [2022-11-30]

2022-11-30T16:27:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3585168932 # 663
* notice: last 14d: unq all: 5 9
* notice: prev accum: outdated-unq outdated-all / unq all: 163 633 / 169 644
* notice: next accum: outdated-unq outdated-all / unq all: 163 633 / 168 642
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +2 +9 -1 -6 / 1 3
* notice: removed / changed dates: [] / [2022-11-16]

2022-11-30T01:40:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3579545016 # 661
* notice: last 14d: unq all: 6 11
* notice: prev accum: outdated-unq outdated-all / unq all: 163 633 / 169 648
* notice: next accum: outdated-unq outdated-all / unq all: 163 633 / 169 644
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -4 / +2 +9 -0 -4 / 2 5
* notice: removed / changed dates: [] / [2022-11-16]

2022-11-29T16:27:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3576030408 # 660