@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-01T16:27:44Z",
-  "count_outdated" : 642,
-  "uniques_outdated" : 165,
+  "timestamp" : "2022-12-07T08:23:03Z",
+  "count_outdated" : 644,
+  "uniques_outdated" : 166,
   "count" : 652,
   "uniques" : 171,
   "views" : [
-    {
-      "timestamp": "2022-11-23T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-27T00:00:00Z",
       "count": 1,
