@@ -1,12 +1,7 @@
 {
-  "count": 10,
-  "uniques": 6,
+  "count": 8,
+  "uniques": 5,
   "views": [
-    {
-      "timestamp": "2022-11-23T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-11-27T00:00:00Z",
       "count": 1,
