@@ -1,3 +1,11 @@
+2022-12-07T08:23:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3637096629 # 683
+* notice: last 14d: unq all: 5 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 165 642 / 171 652
+* notice: next accum: outdated-unq outdated-all / unq all: 166 644 / 171 652
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-23] / []
+
 2022-12-01T16:27:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3594522731 # 666
 * notice: last 14d: unq all: 6 10
